# telnyx-mcp-server

./: .gitignore  DEPLOYMENT_READY.md  README.md  deploy.sh  package-lock.json  package.json  pyproject.toml  smithery.json  smithery.yaml  telnyx.yml  vercel.json
config/: telnyx-server.json
deployment/: Dockerfile
monitoring/: alert-rules.yml  health-monitor.py  prometheus-config.yml
scripts/: start_telnyx_mcp.sh  test_telnyx_mcp.sh
security/: secrets-manager.py  security-validator.py
src/: index.ts
tests/: deployment-validator.py  integration-test.py
